Fixed small issues in thermo and graphical glitches in navbar

--- a/dev_tools/212-text.ipynb
+++ b/dev_tools/212-text.ipynb
@@ -96,6 +96,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tr>\n",
+      "\t<td>Air</td>\n",
+      "\t<td> 28.97</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Carbon dioxide CO<InlineEquation equation=\"_2\" /></td>\n",
+      "\t<td> 44.01</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Ethane C<InlineEquation equation=\"_2\" />H<InlineEquation equation=\"_6\" /></td>\n",
+      "\t<td> 30.07</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Hydrogen H<InlineEquation equation=\"_2\" /></td>\n",
+      "\t<td> 2.01</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Methane CH<InlineEquation equation=\"_4\" /></td>\n",
+      "\t<td> 16.04</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Nitrogen N<InlineEquation equation=\"_2\" /></td>\n",
+      "\t<td> 28.01</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Oxygen O<InlineEquation equation=\"_2\" /></td>\n",
+      "\t<td> 32.00</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Refrigerant 22</td>\n",
+      "\t<td> 86.48</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Refrigerant 134a</td>\n",
+      "\t<td> 102.3</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "\t<td>Water H<InlineEquation equation=\"_2\" />O</td>\n",
+      "\t<td> 18.015</td>\n",
+      "</tr>\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"\"\"<Item>Air- 28.97</Item>\n",
+    "<Item>Carbon dioxide CO<InlineEquation equation=\"_2\" />- 44.01</Item>\n",
+    "<Item>Ethane C<InlineEquation equation=\"_2\" />H<InlineEquation equation=\"_6\" />- 30.07</Item>\n",
+    "<Item>Hydrogen H<InlineEquation equation=\"_2\" />- 2.01</Item>\n",
+    "<Item>Methane CH<InlineEquation equation=\"_4\" />- 16.04</Item>\n",
+    "<Item>Nitrogen N<InlineEquation equation=\"_2\" />- 28.01</Item>\n",
+    "<Item>Oxygen O<InlineEquation equation=\"_2\" />- 32.00</Item>\n",
+    "<Item>Refrigerant 22- 86.48</Item>\n",
+    "<Item>Refrigerant 134a- 102.3</Item>\n",
+    "<Item>Water H<InlineEquation equation=\"_2\" />O- 18.015</Item>\"\"\"\n",
+    "\n",
+    "sp = str.split('\\n')\n",
+    "\n",
+    "clean = ['<tr>\\n\\t<td>' + \"</td>\\n\\t<td>\".join(s.replace('<Item>', '').replace('</Item>', '').split('-')) + \"</td>\\n</tr>\" for s in sp]\n",
+    "\n",
+    "print(\"\\n\".join(clean))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -118,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
