--- a/dev_tools/create_search_index.ipynb
+++ b/dev_tools/create_search_index.ipynb
@@ -2,51 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sta/moments\n",
-      "sta/introduction\n",
-      "sta/cartesian_coordinates\n",
-      "sta/force_systems\n",
-      "sta/vectors_scalars\n",
-      "sta/reaction_forces\n",
-      "sta/trusses\n",
-      "sta/frames_and_machines\n",
       "sta/pltips\n",
+      "sta/cartesian_coordinates\n",
+      "sta/centers_of_mass\n",
+      "sta/force_systems\n",
+      "sta/frames_and_machines\n",
       "sta/free_body_diagrams\n",
       "sta/friction\n",
-      "sta/shear_moment_diagrams\n",
-      "sta/moment_of_inertia\n",
-      "sta/virtual_work\n",
-      "sta/centers_of_mass\n",
       "sta/hydrostatic_fluid_pressure\n",
+      "sta/introduction\n",
+      "sta/moment_of_inertia\n",
+      "sta/moments\n",
+      "sta/reaction_forces\n",
+      "sta/shear_moment_diagrams\n",
+      "sta/trusses\n",
+      "sta/vectors_scalars\n",
+      "sta/virtual_work\n",
       "sol/axial_loading\n",
+      "sol/beam_deflection\n",
+      "sol/bending\n",
+      "sol/buckling\n",
       "sol/combined_loading\n",
+      "sol/failure_theories\n",
       "sol/material_properties\n",
       "sol/pressure_vessels\n",
+      "sol/shear_moment_diagrams\n",
       "sol/strain\n",
       "sol/stress\n",
-      "sol/transverse_shear\n",
-      "sol/torsion\n",
-      "sol/shear_moment_diagrams\n",
       "sol/stress_transformation\n",
-      "sol/beam_deflection\n",
-      "sol/buckling\n",
-      "sol/bending\n",
-      "sol/failure_theories\n",
+      "sol/torsion\n",
+      "sol/transverse_shear\n",
+      "dyn/contact_and_rolling\n",
+      "dyn/particle_kinematics\n",
+      "dyn/particle_kinetics\n",
+      "dyn/rigid_body_kinematics\n",
+      "dyn/rigid_body_kinetics\n",
       "dyn/vector_calculus\n",
       "dyn/vectors\n",
-      "dyn/particle_kinetics\n",
-      "dyn/particle_kinematics\n",
-      "dyn/contact_and_rolling\n",
       "dyn/work_and_energy\n",
-      "dyn/rigid_body_kinematics\n",
-      "dyn/rigid_body_kinetics\n"
+      "thermodynamics/complex_problems\n",
+      "thermodynamics/cycles\n",
+      "thermodynamics/entropy\n",
+      "thermodynamics/heat_and_work\n",
+      "thermodynamics/mass_and_energy_balances\n",
+      "thermodynamics/substances\n",
+      "thermodynamics/thermodynamic_devices\n",
+      "thermodynamics/thermodynamic_systems\n"
      ]
     }
    ],
@@ -60,7 +68,7 @@
     "\n",
     "searchable_pages = []\n",
     "\n",
-    "for dir in ['sta', 'sol', 'dyn']:\n",
+    "for dir in ['sta', 'sol', 'dyn', 'thermodynamics']:\n",
     "    dir_path = os.path.join(pwd, \"src/pages\", dir)\n",
     "    for page in os.listdir(dir_path):\n",
     "        searchable_pages.append(os.path.join(dir, page.replace(\".astro\", '')))\n",
@@ -150,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
