--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[107 rows x 79 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "339"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "  datetime.datetime(2024, 12, 21, 0, 0)]]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "[77 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -5245,16 +5245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Statics & 451.2 & 256.0 & 2.276 & 0.01342 \\\\\n",
-      "Dynamics & 321.5 & 162.2 & 3.209 & 0.00112 \\\\\n",
-      "Solid Mechanics & 293.0 & 175.2 & 2.845 & 0.00313 \\\\\n"
+      "Statics & 451.2 & 256.0 & 2.816 & 0.00448 \\\\\n",
+      "Dynamics & 321.5 & 162.2 & 3.818 & 0.00036 \\\\\n",
+      "Solid Mechanics & 293.0 & 175.2 & 3.353 & 0.00119 \\\\\n"
      ]
     }
    ],
@@ -5266,13 +5266,13 @@
     "    quiz = daily_quiz[class_]\n",
     "    noquiz = daily_noquiz[class_]\n",
     "    \n",
-    "    t, p = stats.ttest_ind(quiz, noquiz, alternative='greater')\n",
+    "    t, p = stats.ttest_rel(quiz, noquiz, alternative='greater')\n",
     "    print(f\"{fancy_name} & {round(np.mean(quiz), 1)} & {round(np.mean(noquiz), 1)} & {round(t, 3)} & {round(p, 5)} \\\\\\\\\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5280,11 +5280,14 @@
      "output_type": "stream",
      "text": [
       "Statics\n",
-      "TtestResult(statistic=3.3083974527590927, pvalue=0.0015988597618013076, df=22.0)\n",
+      "Ind TtestResult(statistic=3.3083974527590927, pvalue=0.0015988597618013076, df=22.0)\n",
+      "Rel TtestResult(statistic=3.4600695402372015, pvalue=0.0026662527774570306, df=11)\n",
       "Dynamics\n",
-      "TtestResult(statistic=3.964318730561231, pvalue=0.00032896568505439577, df=22.0)\n",
+      "Ind TtestResult(statistic=3.964318730561231, pvalue=0.00032896568505439577, df=22.0)\n",
+      "Rel TtestResult(statistic=4.569774047671542, pvalue=0.0004018377460367443, df=11)\n",
       "Solid Mechanics\n",
-      "TtestResult(statistic=2.7314914868131837, pvalue=0.006092296013438889, df=22.0)\n"
+      "Ind TtestResult(statistic=2.7314914868131837, pvalue=0.006092296013438889, df=22.0)\n",
+      "Rel TtestResult(statistic=2.8634321929095385, pvalue=0.007710830461972015, df=11)\n"
      ]
     }
    ],
@@ -5309,7 +5312,8 @@
     "            nq += [noquiz_week[7*w+start[class_]+d]]\n",
     "\n",
     "    print(fancy_name)\n",
-    "    print(stats.ttest_ind(q, nq, alternative='greater'))"
+    "    print('Ind', stats.ttest_ind(q, nq, alternative='greater'))\n",
+    "    print('Rel', stats.ttest_rel(q, nq, alternative='greater'))"
    ]
   },
   {
@@ -5345,7 +5349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
