--- a/dev_tools/adding_ids.ipynb
+++ b/dev_tools/adding_ids.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "course = 'thermodynamics'\n",
+    "course = 'about/documentation'\n",
     "\n",
     "for page in os.listdir(f'../src/pages/{course}'):\n",
     "    with open(os.path.join(f'../src/pages/{course}', page)) as test_file:\n",
