--- a/dev_tools/tex_to_astro2.ipynb
+++ b/dev_tools/tex_to_astro2.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "usr",
    "language": "python",
    "name": "python3"
   },
