--- a/dev_tools/adding_ids.ipynb
+++ b/dev_tools/adding_ids.ipynb
@@ -14,101 +14,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "complex_problems.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#composite_thermodynamic_systems'>Composite Thermodynamic Systems</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#step_1_identify_known_states'>Step 1: Identify Known States</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#step_2_determine_unknowns'>Step 2: Determine Unknowns</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#step_3_write_energy_balances'>Step 3: Write Energy Balances</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#example_refrigeration_and_heat_pump_cycles'>Example: Refrigeration and Heat Pump Cycles</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#(colorred}_textbftransient_systems})'>\\\\(\\\\color{red} \\\\textbf{Transient Systems}\\\\)</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#transient_vs._steady_state_example'>Transient vs. Steady State Example</a></li>\n",
-      "\n",
-      "cycles.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#carnot_cycle'>Carnot cycle</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#carnot_cycle_steps'>Carnot Cycle Steps</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#isothermal_processes'>Isothermal Processes</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#adiabatic_processes'>Adiabatic Processes</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#internal_energy_balance_of_the_system'>Internal Energy Balance of the System</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#thermal_efficiency'>Thermal Efficiency</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#a_rankine_cycle'>A Rankine Cycle</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#otto_cycle'>Otto Cycle</a></li>\n",
-      "\n",
-      "entropy.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#the_second_law_energy_dispersal'>The Second Law: Energy dispersal</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#clausius_statement_of_the_second_law'>Clausius Statement of the Second Law</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#expansion'>Expansion</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#directionality'>Directionality</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#kelvin-planck_statement_of_the_second_law'>Kelvin-Planck Statement of the Second Law</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#clausius_inequality'>Clausius Inequality</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#reversible_process'>Reversible Process</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#internally_reversible_cycles'>Internally Reversible Cycles</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#what_is_entropy?'>What is Entropy?</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#differential_form_of_the_closed_system_energy_balance'>Differential form of the closed system energy balance</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#specific_entropy_of_an_ideal_gas'>Specific Entropy of an Ideal Gas</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#differential_form_of_the_enthalpy_equation'>Differential form of the enthalpy equation</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#entropy_balance'>Entropy Balance</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#entropy_balance_and_multiple_heat_transfer_events'>Entropy Balance and multiple heat transfer events</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rate_of_change_of_entropy'>Rate of Change of Entropy</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#microstates'>Microstates</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#principal_of_superposition'>Principal of Superposition</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#open_system_entropy_rate_balance'>Open System Entropy Rate Balance</a></li>\n",
-      "\n",
-      "heat_and_work.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#heat'>Heat</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#work'>Work</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#(pv)_work'>\\\\(pV\\\\) work</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#shaft_work'>Shaft work</a></li>\n",
-      "\n",
-      "mass_and_energy_balances.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#closed_system_energy_rate_balance'>Closed System Energy Rate Balance</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#closed_system_energy_balance'>Closed System Energy Balance</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#energy_transfer_via_mass_flow'>Energy Transfer via Mass Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#internal_energy_change_via_mass_flow'>Internal Energy Change via Mass Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#(pv)_work_done_via_mass_flow'>\\\\(pV\\\\) Work Done via Mass Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#total_internal_energy_change_via_mass_flow'>Total Internal Energy Change via Mass Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#relative_specific_enthalpy'>Relative Specific Enthalpy</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#internal_energy_rate_balance'>Internal Energy Rate Balance</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#total_energy_balance'>Total Energy Balance</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#total_energy_rate_balance'>Total Energy Rate Balance</a></li>\n",
-      "\n",
-      "substances.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#phases_of_matter'>Phases of matter</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#phase_diagrams'>Phase Diagrams</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#critical_values_and_ideal_gases'>Critical Values and Ideal Gases</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#ideal_gases'>Ideal Gases</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#ideal_gas_assumptions'>Ideal Gas Assumptions</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#equation_of_state'>Equation of State</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#temperature_effects'>Temperature Effects</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#incompressible_fluids'>Incompressible Fluids</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#internal_energy_of_incompressible_fluids'>Internal Energy of Incompressible Fluids</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#specific_heat_of_incompressible_fluids'>Specific Heat of Incompressible Fluids</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#specific_entropy_change_of_incompressible_fluids'>Specific Entropy Change of Incompressible Fluids</a></li>\n",
-      "\n",
-      "thermodynamic_devices.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#nozzle'>Nozzle</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#diffuser'>Diffuser</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#turbine'>Turbine</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#compressor'>Compressor</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#pump'>Pump</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#throttling_device'>Throttling device</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#heat_exchanger'>Heat Exchanger</a></li>\n",
-      "\n",
-      "thermodynamic_systems.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#system,_boundaries_and_surroundings'>System, boundaries and surroundings</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#types_of_systems_closed,_open,_and_isolated_systems'>Types of Systems: Closed, Open, and Isolated Systems</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#units_of_interest'>Units of Interest</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#typical_units_in_si_and_english_systems'>Typical Units in SI and English Systems</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#useful_conversions'>Useful Conversions</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#useful_constants'>Useful Constants</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#helpful_math_expressions'>Helpful Math Expressions</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#mass_and_mass_flow'>Mass and Mass Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#volume_and_volume_flow'>Volume and Volume Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#volume_flow'>Volume Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#energy_and_energy_flow'>Energy and Energy Flow</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#internal_energy'>Internal Energy</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#potential_energy'>Potential Energy</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#kinetic_energy'>Kinetic Energy</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#enthalpy'>Enthalpy</a></li>\n",
-      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#entropy'>Entropy</a></li>\n",
+      "prairiedraw.astro <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#quick_start'>Quick start</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#coordinate_systems'>Coordinate systems</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vectors'>Vectors</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#drawing_elements'>Drawing elements</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#arrows'>Arrows</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#points'>Points</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#text'>Text</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#lines'>Lines</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#circles'>Circles</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rectangles'>Rectangles</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#drawing_properties'>Drawing properties</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#transformations'>Transformations</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#saving_and_restoring_graphics_state'>Saving and restoring graphics state</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#drawing_options_and_prairiedraw_objects'>Drawing options and PrairieDraw objects</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#animation'>Animation</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sequenced_animations'>Sequenced animations</a></li>\n",
+      "<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#numerical_differentiation'>Numerical differentiation</a></li>\n",
       "\n"
      ]
     }
