--- a/dev_tools/archive/new_cbtf.ipynb
+++ b/dev_tools/archive/new_cbtf.ipynb
@@ -55,14 +55,7 @@
     "\n",
     "home = os.path.join(os.getcwd(), 'dist')\n",
     "\n",
-    "utils.explore_dir_and_move(home, '', banned_dirs)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "links_to_replace\n"
+    "utils.explore_dir_and_move(home, '', banned_dirs)\n"
    ]
   },
   {
