mf and thermo menus

--- a/dev_tools/course_menus.ipynb
+++ b/dev_tools/course_menus.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "    'thermodynamics': \"Thermodynamics\"\n",
     "}\n",
     "\n",
-    "for course in ['sta', 'dyn', 'mf', 'md', 'thermodynamics']:\n",
+    "for course in ['sta', 'dyn', 'mf', 'thermodynamics']:\n",
     "    cpath = os.path.join('../src/pages', course)\n",
     "\n",
     "    course_pages = os.listdir(cpath)\n",
@@ -52,7 +52,7 @@
     "        </CourseCard>\n",
     "        '''\n",
     "        \n",
-    "        simp_list += f'<li slot=\"list\"><a href=\"/{course}/{p.replace(\".astro\", \"\")}?origin=coursemenu\">{title}</a></li>'\n",
+    "        simp_list += f'<li slot=\"list\"><a href=\"/{course}/{p.replace(\".astro\", \"\")}?origin=coursemenu\">{title}</a></li>\\n'\n",
     "\n",
     "    course_string = f'''---\n",
     "import Layout from \"../layouts/CourseMenuLayout.astro\"\n",
