added new courses to searchbar

--- a/dev_tools/create_search_index.ipynb
+++ b/dev_tools/create_search_index.ipynb
@@ -27,26 +27,26 @@
       "sta/virtual_work\n",
       "sol/axial_loading\n",
       "sol/beam_deflection\n",
-      "sol/bending\n",
       "sol/buckling\n",
       "sol/combined_loading\n",
       "sol/failure_theories\n",
-      "sol/material_properties\n",
       "sol/pressure_vessels\n",
       "sol/shear_moment_diagrams\n",
-      "sol/strain\n",
+      "sol/bending\n",
       "sol/stress\n",
       "sol/stress_transformation\n",
       "sol/torsion\n",
       "sol/transverse_shear\n",
+      "sol/strain\n",
+      "sol/material_properties\n",
+      "dyn/vectors\n",
+      "dyn/work_and_energy\n",
       "dyn/contact_and_rolling\n",
+      "dyn/rigid_body_kinetics\n",
       "dyn/particle_kinematics\n",
       "dyn/particle_kinetics\n",
       "dyn/rigid_body_kinematics\n",
-      "dyn/rigid_body_kinetics\n",
       "dyn/vector_calculus\n",
-      "dyn/vectors\n",
-      "dyn/work_and_energy\n",
       "thermodynamics/complex_problems\n",
       "thermodynamics/cycles\n",
       "thermodynamics/entropy\n",
@@ -54,7 +54,17 @@
       "thermodynamics/mass_and_energy_balances\n",
       "thermodynamics/substances\n",
       "thermodynamics/thermodynamic_devices\n",
-      "thermodynamics/thermodynamic_systems\n"
+      "thermodynamics/thermodynamic_systems\n",
+      "md/Cams\n",
+      "md/Instant_Centers\n",
+      "md/Dynamic_Force_Analysis\n",
+      "md/Graphical_Linkage_Synthesis\n",
+      "md/Position_Velocity_Acceleration\n",
+      "md/Virtual_Work\n",
+      "md/Balancing\n",
+      "mf/Failure_Theories\n",
+      "mf/Stress_Concentrations\n",
+      "mf/Threaded_Components\n"
      ]
     }
    ],
@@ -68,7 +78,7 @@
     "\n",
     "searchable_pages = []\n",
     "\n",
-    "for dir in ['sta', 'sol', 'dyn', 'thermodynamics']:\n",
+    "for dir in ['sta', 'sol', 'dyn', 'thermodynamics', 'md', 'mf']:\n",
     "    dir_path = os.path.join(pwd, \"src/pages\", dir)\n",
     "    for page in os.listdir(dir_path):\n",
     "        searchable_pages.append(os.path.join(dir, page.replace(\".astro\", '')))\n",
@@ -158,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
